--- a/.github/workflows/fortify.yml
+++ b/.github/workflows/fortify.yml
@@ -19,7 +19,7 @@
 name: Fortify on Demand Scan
 
 # TODO: Customize trigger events based on your DevSecOps processes and typical FoD SAST scan time
-on:
+on: push
   workflow_dispatch:
   push:
     branches: [ main ]
